fixed body overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,7 @@ body {
   padding-right: env(safe-area-inset-right);
   padding-bottom: env(safe-area-inset-bottom);
   padding-left: env(safe-area-inset-left);
+  overflow: hidden;
 }
 
 a {
